# SquidKeys

./: .gitignore  README.md  pyproject.toml
docs/: api-reference.md  interface-map.yaml
src/key_store/: __init__.py  api.py  api_main.py  mcp_server.py  models.py  store.py
tests/: test_api.py  test_mcp.py  test_store.py
