[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "squidkeys"
version = "0.2.0"
description = "Secure DuckDB-backed credential storage for agent systems"
readme = "README.md"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "cryptography>=42.0.0",
  "duckdb>=1.4.0",
  "fastapi>=0.115.0",
  "mcp>=1.0.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
]

[project.scripts]
squidkeys-api = "key_store.api_main:main"
squidkeys-mcp = "key_store.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
